dodana metoda na prototip

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <body>
     <h1 style="text-align: center; font-size: 3rem">Pogodi rec</h1>
     <p id="rec" style="text-align: center; font-size: 2rem"></p>
-
     <p id="pokusaji" style="text-align: center; font-size: 2rem"></p>
     <p id="izgubio" style="text-align: center; font-size: 2rem"></p>
     <p id="alert" style="text-align: center; font-size: 5rem"></p>
     <p style="text-align: center; font-size: 2rem">
-      Pravilo: Ne smes kucati isto slovo dva puta!
+      Pravilo: Ne kucaj dva puta isto slovo!
     </p>
     <script src="./app.js"></script>
   </body>
