--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <p id="pokusaji" style="text-align: center; font-size: 2rem"></p>
     <p id="izgubio" style="text-align: center; font-size: 2rem"></p>
     <p id="alert" style="text-align: center; font-size: 5rem"></p>
-    <p style="text-align: center; font-size: 2rem">
-      Pravilo: Ne kucaj dva puta isto slovo!
-    </p>
+    <p id="pobeda" style="text-align: center; font-size: 2rem"></p>
     <script src="./app.js"></script>
   </body>
 </html>
