logika promenjena,dodat status igre

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <body>
     <h1 style="text-align: center; font-size: 3rem">Pogodi rec</h1>
     <p id="rec" style="text-align: center; font-size: 2rem"></p>
-    <p id="pokusaji" style="text-align: center; font-size: 2rem"></p>
-    <p id="izgubio" style="text-align: center; font-size: 2rem"></p>
-    <p id="alert" style="text-align: center; font-size: 5rem"></p>
-    <p id="pobeda" style="text-align: center; font-size: 2rem"></p>
+    <p id="poruka" style="text-align: center; font-size: 2rem"></p>
     <script src="./app.js"></script>
   </body>
 </html>
