--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <h1 style="text-align: center; font-size: 3rem">Pogodi rec</h1>
     <p id="rec" style="text-align: center; font-size: 2rem"></p>
     <p id="poruka" style="text-align: center; font-size: 2rem"></p>
+
+    <script src="./slagalica.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
